welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur) {
	
	droite()
 	droite()
		while(!estSurBiscuit && !estFaceMur) {
			avance()
		}
	while(!estSurBiscuit &&!estFaceMur) {
	prendBiscuit()
	droite()
	droite()}
		while(!estSurBiscuit && !estFaceMur) {
			avance()
		}
	while(!estSurBiscuit &&!estFaceMur) {
	recule()
	poseBiscuit()
	recule()
}
}	
gauche()
avance()
gauche()
avance()


